# hylomorph

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  logging_system.txt  new-spec.sh  orchestration_design.txt  rust-toolchain.toml  spec-as-source-dev-guide.md  upgrades.md
.cursor/agents/: dev-developer.md  dev-planner.md  dev-unit-test-writer.md  orchestration-creator.md  qa-tester.md
.github/workflows/: ci.yml  release.yml
harness/: Cargo.toml  README.md
harness/crates/harness-cli/: Cargo.toml
harness/crates/harness-cli/src/: main.rs  tui.rs
harness/crates/harness-cli/templates/: draft-design.md  draft-requirements.md  draft-tasks.md
harness/crates/harness-core/: Cargo.toml
harness/crates/harness-core/src/: aclc.rs  config.rs  layers.rs  lib.rs  loop_runner.rs  manifest.rs  memory.rs  oracle.rs  prompt.rs  snapshot.rs  spec.rs  trace.rs
harness/crates/harness-core/tests/: aclc_loop.rs
harness/crates/harness-gui/: Cargo.toml
harness/crates/harness-gui/src/: main.rs  runner.rs  trace_view.rs
harness/docs/: ACLC-CONFORMANCE.md  egui-ui-proposal.md
harness/src/: config.rs  hooks.rs  loop_runner.rs  main.rs  manifest.rs  prompt.rs  spec.rs  state.rs  tui.rs  util.rs
harness/templates/: draft-eval.md  draft-spec.md  harness-setup.md
hylomorph/: Cargo.toml  README.md
hylomorph/crates/hylomorph-cli/: Cargo.toml
hylomorph/crates/hylomorph-cli/src/: lib.rs  main.rs  tui.rs
hylomorph/crates/hylomorph-cli/templates/: draft-eval.md  draft-tasks.md  hylomorph-setup.md
hylomorph/crates/hylomorph-core/: Cargo.toml
hylomorph/crates/hylomorph-core/src/: aclc.rs  config.rs  hooks.rs  layers.rs  lib.rs  loop_runner.rs  manifest.rs  memory.rs  oracle.rs  prompt.rs  scope.rs  snapshot.rs  spec.rs  state.rs  util.rs
hylomorph/crates/hylomorph-core/tests/: aclc_loop.rs
hylomorph/crates/hylomorph-gui/: Cargo.toml
hylomorph/crates/hylomorph-gui/src/: main.rs  runner.rs
hylomorph/docs/: ACLC-CONFORMANCE.md
knowledge/: cursor-headless-cli.md  cursor-hooks.md  cursor-subagents.md
scripts/: build-and-reinstall.sh  maps_lint.py  reinstall-harness.sh  reinstall-hylomorph.sh
src/: hooks.rs  prompt.rs  state.rs
templates/maps/: reply.aborted.md.tmpl  reply.escalation.md.tmpl  reply.handoff.md.tmpl  reply.result.md.tmpl  task.md.tmpl
