[package]
name = "harness-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "harness"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
clap.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
toml.workspace = true
ratatui.workspace = true
crossterm.workspace = true
