[package]
name = "harness-core"
version.workspace = true
edition.workspace = true

[lib]
name = "harness_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
chrono.workspace = true
anyhow.workspace = true
globset.workspace = true
walkdir.workspace = true
sha2.workspace = true
hex.workspace = true
